# TimeMe

./: .gitignore  README.md  pyproject.toml  setup.py
TimeMe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: compare.py  sort.py  varying_input.py
tests/: timer_test.py
timeme/: :w  __init__.py  main.py  test.py  timer.py  timer_utils.py
