[build-system]
requires= ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "Please-TimeMe"
version = "0.0.1"
description = """A small package to help
    time/profile the execution of functions
    and manage experiments measuring run time
    """

readme = "README.md"
authors = [{ name = "Rohin Dasari", email = "rohin.dasari@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
keywords = ["profile", "timing", "runtime"]
dependencies = [
    "pandas",
    "tqdm"
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/rohin-dasari/TimeMe"






